--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
      <nav class="navbar">
-        <div class="navitem">
+        <div class="navitem" style="text-shadow: 2px 2px 4px;">
             <p>Best Sellers</p>
             <p> Gift Ideas</p>
             <p>New Releases</p>
